<resources>
    <string name="PlayerDanmakuTextStyle_none">【普通】</string>
    <string name="PlayerDanmakuTextStyle_projection">【投影】</string>
    <string name="PlayerDanmakuTextStyle_shadow">【阴影】</string>
    <string name="PlayerDanmakuTextStyle_thick_stroke">【描边】</string>
    <string name="PlayerDanmaku_alpha">弹幕字体透明</string>
    <string name="PlayerDanmaku_danmaku_ttf">弹幕字体等宽</string>
    <string name="PlayerError_fmt2">播放器错误: %1$d, %2$d</string>
    <string name="PlayerError_resolve_fmt1">解析错误: %s</string>
    <string name="PlayerInit_android_list_player">初始化播放器: v1 (SYS-HW)</string>
    <string name="PlayerInit_android_player">初始化播放器: v1 (HW)</string>
    <string name="PlayerInit_failed_retry">初始化失败,重试</string>
    <string name="PlayerInitialization">初始化播放器…</string>
    <string name="PlayerMode_use_android_player_only">播放模式检查: v1播放器</string>
    <string name="PlayerMode_use_auto_selected_player">播放模式检查: 自动选择</string>
    <string name="PlayerReactTips_network_problem">(▔□▔)/ 快开网络啦,人家整个人都掉线了喵~</string>
    <string name="PlayerReactTips_play_failed">_(:3」∠)_ 小电视由于抖动过于频繁罢工了喵~</string>
    <string name="PlayerReactTips_resolve_failed">Σ(￣□￣||)因为某些未知的原因,视频解析失败了呢~</string>
    <string name="PlayerReactTips_retry_loading">重试请戳右边(¬_¬)</string>
    <string name="PlayerReactTips_retry_playing_action">抢救一下</string>
    <string name="PlayerReactTips_too_slowly">(´･_･`) 服务器抽风中,咱表示已经习惯了喵~</string>
    <string name="PlayerReactTips_unknown_error">╮(￣▽￣)╭道理咱都明白,但是为什么播不了呢</string>
    <string name="PlayerReactTips_unknown_error_on_playing">播放发生未知错误!</string>
    <string name="PlayerReactTips_wifi_state_off_action">关闭播放</string>
    <string name="PlayerRetryCount_fmt1">播放器出错,重试: %1$d/%2$d</string>
    <string name="PlayerSdkInitialization">初始化播放组件</string>
    <string name="PlayerStageStatus_disabled">【禁止】</string>
    <string name="PlayerStageStatus_ellipsis">...</string>
    <string name="PlayerStageStatus_enabled">【允许】</string>
    <string name="PlayerStageStatus_failed">【失败】</string>
    <string name="PlayerStageStatus_hide">【隐藏】</string>
    <string name="PlayerStageStatus_live">【直播】</string>
    <string name="PlayerStageStatus_live_play_block">直播被终止,请稍后重试</string>
    <string name="PlayerStageStatus_live_play_end">直播已结束…</string>
    <string name="PlayerStageStatus_live_play_preparing">直播准备中,请稍后重试</string>
    <string name="PlayerStageStatus_live_play_round">准备播放轮播视频</string>
    <string name="PlayerStageStatus_live_play_start">开播啦~准备好板凳和瓜子~</string>
    <string name="PlayerStageStatus_succeeded">【完成】</string>
    <string name="PlayerStage_check_danmaku_text_style">弹幕装填类型</string>
    <string name="PlayerStage_check_danmaku_visibility">弹幕显示状态</string>
    <string name="PlayerStage_fmt1_bitrate_found">发现视频源(参考码率 %dkbps)</string>
    <string name="PlayerStage_fmt1_bitrate_selected">选择视频源(参考码率 %dkbps)</string>
    <string name="PlayerStage_fmt1_resolve_segment_started">准备播放第%d段视频</string>
    <string name="PlayerStage_load_danmaku">全舰弹幕装填</string>
    <string name="PlayerStage_prepare_media">开始视频缓冲</string>
    <string name="PlayerStage_resolve_media_resolve">解析视频地址</string>
    <string name="a_week_ago">一周前</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="adjust_content">原始比例</string>
    <string name="adjust_screen">适应屏幕</string>
    <string name="advertising">广告</string>
    <string name="animation">动画</string>
    <string name="app_name">哔哩哔哩</string>
    <string name="area">分区</string>
    <string name="area_bangumi">番剧区</string>
    <string name="bangumi">番剧</string>
    <string name="bangumi_bought_toast">已购买本片</string>
    <string name="bangumi_describe">番剧简介:</string>
    <string name="bangumi_empty_episode">未开播</string>
    <string name="bangumi_favorite">收藏</string>
    <string name="bangumi_favorite_success">已收藏至“我的收藏”哟\\^o^/</string>
    <string name="bangumi_follow">追番</string>
    <string name="bangumi_followed">已追</string>
    <string name="bangumi_go_buy">购买本片</string>
    <string name="bangumi_has_bought">已购买</string>
    <string name="bangumi_info_describe">剧情简介:</string>
    <string name="bangumi_item_end_fmt">已完结,%s话全</string>
    <string name="bangumi_item_end_fmt1">已完结,全%s话</string>
    <string name="bangumi_main_follow">追 番</string>
    <string name="bangumi_more">更多</string>
    <string name="bangumi_not_exist">找不到该番剧噢</string>
    <string name="bangumi_not_login">还没有登录哦~喵</string>
    <string name="bangumi_nothing_play">没有内容可以播放呢</string>
    <string name="bangumi_one_episode">选集</string>
    <string name="bangumi_play">播放</string>
    <string name="bangumi_play_last_episode_fmt">上次看到第 %s 话</string>
    <string name="bangumi_search">番剧索引</string>
    <string name="bangumi_season_info_text_fmt">播放: %s</string>
    <string name="bangumi_season_serial">连载中</string>
    <string name="bangumi_season_serial_fmt">连载中,每周%s更新</string>
    <string name="bangumi_season_subscribe_text_fmt">追番: %s</string>
    <string name="bangumi_staff">STAFF:</string>
    <string name="bangumi_subscribe_success">自己追的番就要好好看完哟\\^o^/</string>
    <string name="bangumi_tag">TAG:</string>
    <string name="bangumi_time">放送表</string>
    <string name="bangumi_un_favorite">已收藏</string>
    <string name="bangumi_unsubscribe_success">哼！竟然真的抛弃了人家(>_&lt;)</string>
    <string name="beijing_timezone_name">GMT+8</string>
    <string name="bili_buy_vip">bilibili APP扫码购买</string>
    <string name="box_list_favorite">自定义收藏</string>
    <string name="buffering">嘿咻~正在努力缓冲…</string>
    <string name="cancel">取消</string>
    <string name="coin">"硬币: "</string>
    <string name="comment">评论</string>
    <string name="confirm">确定</string>
    <string name="continue_play">继续播放</string>
    <string name="dance">舞蹈</string>
    <string name="danmaku">弹幕</string>
    <string name="danmaku_alpha">弹幕透明</string>
    <string name="danmaku_size">弹幕大小</string>
    <string name="danmaku_toggle">弹幕开关</string>
    <string name="day">日</string>
    <string name="day_yesterday">昨天</string>
    <string name="days_ago">%1$d天前</string>
    <string name="default_text">默认</string>
    <string name="desc_fullhd">1080P</string>
    <string name="desc_high">高清</string>
    <string name="desc_low">流畅</string>
    <string name="desc_middle">清晰</string>
    <string name="desc_super">超清</string>
    <string name="desc_unknown">unknown</string>
    <string name="episode">分集</string>
    <string name="error_network_none">当前网络状况不佳</string>
    <string name="error_network_timeout">网络连接超时!</string>
    <string name="error_unknown">发生未知错误</string>
    <string name="error_unknown_code">发生错误:%d</string>
    <string name="exit_confirm_tip">确定要退出播放吗？</string>
    <string name="exit_confirmed">确认退出</string>
    <string name="favorite">收藏</string>
    <string name="fun">娱乐</string>
    <string name="game">游戏</string>
    <string name="history">历史</string>
    <string name="hot_recommend">热门推荐</string>
    <string name="hot_video">热门视频</string>
    <string name="hour">小时</string>
    <string name="hours_ago">%1$d小时前</string>
    <string name="ijkplayer_dummy" />
    <string name="index">索引</string>
    <string name="input_captcha">输入验证码</string>
    <string name="input_picture_captcha_et_hint">请输入图片中的内容</string>
    <string name="is_really_confirmed_to_clear_video_history">你真的确认清空我的历史吗?</string>
    <string name="is_really_confirmed_to_exit_the_application">你真的确认退出应用吗?</string>
    <string name="is_really_confirmed_to_logout">你确定退出当前登录账号吗？</string>
    <string name="just">刚刚</string>
    <string name="keyboard_clear">清空</string>
    <string name="keyboard_delete">删除</string>
    <string name="keyboard_search">搜索</string>
    <string name="kichiku">鬼畜</string>
    <string name="latest">最新</string>
    <string name="life">生活</string>
    <string name="listOrder_danmaku">按弹幕数</string>
    <string name="listOrder_hot">按播放数</string>
    <string name="listOrder_new">最新视频</string>
    <string name="listOrder_review">按评论数</string>
    <string name="listOrder_stow">按收藏数</string>
    <string name="live">直播</string>
    <string name="loading_error">哎呀, 加载失败了...</string>
    <string name="login">登录</string>
    <string name="login_error_captcha_error">验证码错啦</string>
    <string name="login_error_fmt">登录错误:%s</string>
    <string name="login_error_login_failed">登录失败</string>
    <string name="login_error_password_error">请确认用户名或密码是否正确</string>
    <string name="login_error_password_retry_too_many">密码错误次数太多</string>
    <string name="login_error_user_not_exist">用户名不存在或无法登录</string>
    <string name="login_input_captcha">请输入验证码</string>
    <string name="login_qr_load_error">二维码加载失败</string>
    <string name="login_qr_login_failed">扫码登录失败啦</string>
    <string name="login_qr_refresh">按确定键刷新</string>
    <string name="login_scan_qr_tips">在我的界面使用扫一扫登录</string>
    <string name="login_success">登录成功</string>
    <string name="logout">退出</string>
    <string name="logout_cancel">手滑了</string>
    <string name="main_index">索 引</string>
    <string name="mark_prefix_pink">"&lt;font color='#FF6186'>"</string>
    <string name="minute">分钟</string>
    <string name="minutes_ago">%1$d分钟前</string>
    <string name="month">月</string>
    <string name="month_specific">%1$d-%2$d</string>
    <string name="months_ago">%1$d月前</string>
    <string name="move_qrdialog_not_pay_ensure">播放预告片</string>
    <string name="move_qrdialog_not_pay_tips">还未购买本片或未登录，请使用手机客户端扫码付费后食用</string>
    <string name="movie">电影</string>
    <string name="music">音乐</string>
    <string name="my">我的</string>
    <string name="my_attention">动态</string>
    <string name="my_favorite">我的收藏</string>
    <string name="my_history">我的历史</string>
    <string name="my_subscribe">我的追番</string>
    <string name="network_ssl_handshake">服务器验证失败,请检查系统时间!</string>
    <string name="network_unavailable">网络无法连接</string>
    <string name="nine_nine_nine">999</string>
    <string name="nothing_show">什么都还没有呢 (￣▽￣)</string>
    <string name="off">弹幕关</string>
    <string name="oldest">怀旧</string>
</resources>